--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,64 @@
 
-body{
-    font-family: 'Roboto', sans-serif;
-    background-color:#FFF;
-    color:#434455;
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+} 
+
+img{
+    display: block;
+    max-width: 100%;
 }
-h1,h2,h3{
-    color: #2E2F42;
+body {
+    margin: 0 auto;
+    font-family: "Roboto", sans-serif;
+    color: #434455;
+    font-size: 16px; 
+    background-color: #ffffff;
+    line-height: 1.5;
 }
-h1,h2{
-    text-align: center;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+    font-family: "Roboto", sans-serif;
 }
-ul{
+
+p {
+    margin: 0;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
     list-style-type: none;
 }
-a{
-text-decoration: none;
-font-style: none;
+
+a {
+    text-decoration: none; 
 }
+
+.container {
+    max-width:1440px;
+    padding-left: 0px;  
+    padding-right: 0px; 
+    margin-left: auto; 
+    margin-right: auto;
+}
+
 /*Обнуляющий стиль*/
 
 /*Шапка*/
 .hedader {
     background: #FFF;
+    display: flex;
 }
-.menu {
-    
+.menu{
+    margin-right: 332px; 
 }
 .menu-link{
     color: #4d5ae5;
@@ -34,6 +68,11 @@ font-style: none;
     line-height: 1.17; 
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-left: 156px;
+    margin-right: 76px;
+    padding-top: 25.5px;
+    padding-bottom: 25.5px;
+
 
 }
 .menu-link-studio {
@@ -47,7 +86,11 @@ font-style: none;
 }
 
 .menu-list {
-
+    display: inline-flex;
+    align-items: flex-start;
+    gap: 40px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .menu-item-link {
@@ -70,9 +113,13 @@ font-style: none;
     line-height: 24px;
 }
 .contacts-list {
+    display: inline-flex;
+    align-items: flex-start;
+    gap: 40px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 
 }
-
 .contacts-link{
     
 }
@@ -88,6 +135,11 @@ font-style: none;
 /*Банер*/
 .banner {
     background: #2E2F42;
+    display: inline-flex;
+    padding: 188px 472px;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
 
 }
 .banner-title {
@@ -97,16 +149,23 @@ font-style: none;
     font-weight: 700;
     line-height: 1.07;
     letter-spacing: 1.12px;
+    width: 496px;
 }
 .banner-button {
-    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     background: #4D5AE5;
     color: #FFF;
-    cursor:pointer;   
+    cursor:pointer; 
+    display: flex;
+    padding: 16px 32px;
+    align-items: flex-start;
+    gap: 10px; 
+    border-radius: 4px;
+    background: var(--IRIS, #4D5AE5);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15); 
 }
 .banner-button:hover,
 .banner-button:focus{
@@ -118,9 +177,18 @@ font-style: none;
     
 }
 .soft-skills-list {
-    
+    display: inline-flex;
+    align-items: flex-start;
+    gap: 24px;
+    padding: 156px 120px;
+
 }
 .soft-skills-item {
+    display: flex;
+    width: 264px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
 }
 .soft-skills-item-title{
     color: #2E2F42;
@@ -139,6 +207,9 @@ font-style: none;
 /*Команда*/
 .team {
     background:#F4F4FD;
+    padding: 120px 156px;
+    
+    
 }
 .team-title{
     color: #2E2F42;
@@ -148,14 +219,20 @@ font-style: none;
     line-height: 1.11; 
     letter-spacing: 0.72px;
     text-transform: capitalize;
+    margin-bottom: 72px;
 }
 .team-list {
-    
+    display: inline-flex;
+    gap: 24px;
 }
 .team-item {
-    line-height: 1.2;
+    display: flex;
+    padding-bottom: 32px;
+    flex-direction: column;
     justify-content: center;
-    background:  #FFF;
+    align-items: center;
+    gap: 32px;
+    
 }
 
 .team-item-title{
@@ -186,19 +263,33 @@ font-style: none;
     letter-spacing: 0.72px;
     text-transform: capitalize;
     line-height: 1.11;
+    padding-top: 120px;
 }
 .portfolio-list {
-
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    padding: 72px 156px 120px 156px;
 }
 .portfolio-item {
     line-height: 1.11;
     background: #FFF;
+    display: flex;
+    width: 360px;
+    height: 420px;
+    padding-bottom: 32px;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-shrink: 0;
+    border: 1px solid #E7E9FC;
+    background:  #FFF;
 }
-.portfolio-item:nth-child(3){
+.portfolio-item :not(3),
+.portfolio-item :not(6){
+gap: 32px;
 }
-.portfolio-item:nth-child(6){
-    
-}
+
+
 .portfolio-item-title{
     color:#2E2F42;
     font-size: 20px;
@@ -218,6 +309,10 @@ font-style: none;
 /*Подвал*/
 .down {
     background: #2E2F42;
+    height: 312px;
+    flex-shrink: 0;
+    padding-left: 156px;
+    padding-top: 100px;
 }
 
 .down-link{
@@ -228,6 +323,7 @@ font-style: none;
     line-height: 1.17; 
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    
     }
 .down-link-studio{
     justify-content: center;
@@ -244,6 +340,7 @@ font-style: none;
     font-size: 16px;
     line-height: 24px; 
     letter-spacing: 0.32px;
+    width: 264px;
 }
 
 
