--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ img{
 }
 body {
     margin: 0 auto;
+    width: 1440px;
     font-family: "Roboto", sans-serif;
     color: #434455;
     font-size: 16px; 
@@ -43,22 +44,28 @@ a {
 }
 
 .container {
-    max-width:1440px;
-    padding-left: 0px;  
-    padding-right: 0px; 
-    margin-left: auto; 
-    margin-right: auto;
+    width: 1158px; 
+    margin: 0 auto;
+    padding: 0 15px 0 15px;
 }
-
 /*Обнуляющий стиль*/
 
 /*Шапка*/
 .hedader {
     background: #FFF;
     display: flex;
+    border-bottom: 1px solid #e7e9fc;
+    
 }
+.container-hedader{
+    display: flex;
+    justify-content: space-between;
+}
+
 .menu{
-    margin-right: 332px; 
+    display: flex; 
+    align-items: center; 
+    
 }
 .menu-link{
     color: #4d5ae5;
@@ -68,13 +75,9 @@ a {
     line-height: 1.17; 
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    margin-left: 156px;
     margin-right: 76px;
-    padding-top: 25.5px;
-    padding-bottom: 25.5px;
-
-
 }
+
 .menu-link-studio {
     color: #2e2f42 ;
     font-family: "Raleway", sans-serif;
@@ -86,14 +89,12 @@ a {
 }
 
 .menu-list {
-    display: inline-flex;
-    align-items: flex-start;
+    display: flex; 
     gap: 40px;
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 
 .menu-item-link {
+    padding: 24px 0;
     color: #2E2F42;
     font-size:16px;
     font-weight: 500;
@@ -107,21 +108,18 @@ a {
 }
 
 .contacts {
+    display: flex;
     letter-spacing: 0.32px;
     font-style: normal;
     font-size:16px; 
     line-height: 24px;
 }
 .contacts-list {
-    display: inline-flex;
-    align-items: flex-start;
+    display: flex;
     gap: 40px;
-    padding-top: 24px;
-    padding-bottom: 24px;
-
 }
 .contacts-link{
-    
+    padding: 24px 0;
 }
 .contacts-link-mail-tell{
     color:#434455; 
@@ -134,37 +132,43 @@ a {
 
 /*Банер*/
 .banner {
-    background: #2E2F42;
-    display: inline-flex;
+    display: flex;
     padding: 188px 472px;
+    background: #2E2F42;
+}
+.container-banner{
+    display: inline-flex;
     flex-direction: column;
     align-items: center;
     gap: 48px;
-
 }
+
 .banner-title {
-    color:#FFF;
+    width: 496px;
+    color: #FFF;
     text-align: center;
     font-size: 56px;
     font-weight: 700;
-    line-height: 1.07;
+    line-height: 60px; /* 107.143% */
     letter-spacing: 1.12px;
-    width: 496px;
 }
+
 .banner-button {
+    display: block;
+    margin: 0 163.5px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    background: #4D5AE5;
+    background-color: #4D5AE5;
     color: #FFF;
-    cursor:pointer; 
-    display: flex;
-    padding: 16px 32px;
-    align-items: flex-start;
+    cursor:pointer;
+    border: none; 
+    min-width: 169px; 
+    height: 56px;
     gap: 10px; 
     border-radius: 4px;
-    background: var(--IRIS, #4D5AE5);
+    background:#4D5AE5;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15); 
 }
 .banner-button:hover,
@@ -174,24 +178,32 @@ a {
 
 /*Скилы*/
 .soft-skills {
-    
+    padding: 120px 0; 
 }
+ .visually-hidden{
+    display: none;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    bottom: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+ }
 .soft-skills-list {
-    display: inline-flex;
-    align-items: flex-start;
+    display: flex;
     gap: 24px;
-    padding: 156px 120px;
-
 }
 .soft-skills-item {
-    display: flex;
+    width: calc((100% – 72px)/4);
     width: 264px;
-    flex-direction: column;
-    align-items: flex-start;
     gap: 8px;
 }
 .soft-skills-item-title{
     color: #2E2F42;
+    margin-bottom: 8px;
     font-size: 20px;
     font-weight: 500;
     line-height: 24px;
@@ -207,9 +219,7 @@ a {
 /*Команда*/
 .team {
     background:#F4F4FD;
-    padding: 120px 156px;
-    
-    
+    padding: 120px 0   
 }
 .team-title{
     color: #2E2F42;
@@ -222,22 +232,26 @@ a {
     margin-bottom: 72px;
 }
 .team-list {
-    display: inline-flex;
+    display: flex;
     gap: 24px;
 }
 .team-item {
-    display: flex;
+    width: calc((100% – 72px)/4);
+    border-radius: 0px 0px 4px 4px; 
     padding-bottom: 32px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 32px;
-    
+    gap: 32px;  
+}
+.container-team-item-title{
+padding: 32px 0;
 }
 
 .team-item-title{
     color:#2E2F42;
     text-align: center;
+    margin-bottom: 8px;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2 ;
@@ -254,24 +268,26 @@ a {
 /*Портфолио*/
 .portfolio {
     background: #FFF;
+    padding: 120px 0 120px 0;
 }
 .portfolio-title{
     color: #2E2F42;
+    margin-bottom: 72px;
     text-align: center;
     font-size: 36px;
     font-weight: 700; 
     letter-spacing: 0.72px;
     text-transform: capitalize;
     line-height: 1.11;
-    padding-top: 120px;
 }
 .portfolio-list {
-    display: flex;
+    display:flex;
     flex-wrap: wrap;
-    gap: 24px;
-    padding: 72px 156px 120px 156px;
+    column-gap: 24px;
+    row-gap: 48px; 
 }
 .portfolio-item {
+    width: calc((100% – 48px)/3);
     line-height: 1.11;
     background: #FFF;
     display: flex;
@@ -283,12 +299,11 @@ a {
     flex-shrink: 0;
     border: 1px solid #E7E9FC;
     background:  #FFF;
+    border-top: none; 
 }
-.portfolio-item :not(3),
-.portfolio-item :not(6){
-gap: 32px;
+.container-portfolio-item-title{
+    padding: 32px 16px;
 }
-
 
 .portfolio-item-title{
     color:#2E2F42;
@@ -296,6 +311,7 @@ gap: 32px;
     font-weight: 500;
     line-height: 24px;
     letter-spacing: 0.4px;
+    margin-bottom: 8px
 
 }
 .portfolio-item-text{
@@ -309,13 +325,12 @@ gap: 32px;
 /*Подвал*/
 .down {
     background: #2E2F42;
-    height: 312px;
-    flex-shrink: 0;
-    padding-left: 156px;
-    padding-top: 100px;
+    padding: 100px 0;
 }
 
 .down-link{
+    display: inline-block;
+    margin-bottom: 16px;
     color: #4d5ae5;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
@@ -340,7 +355,7 @@ gap: 32px;
     font-size: 16px;
     line-height: 24px; 
     letter-spacing: 0.32px;
-    width: 264px;
+    max-width: 264px;
 }
 
 
