--- a/css/styles.css
+++ b/css/styles.css
@@ -299,6 +299,7 @@ padding: 32px 0;
 .container-portfolio-item-title{
     padding: 32px 16px;
     width: 360px;
+    height: 120px;
     border: 1px solid #e7e9fc;
     border-top: none; 
 }
