--- a/css/styles.css
+++ b/css/styles.css
@@ -287,13 +287,12 @@ padding: 32px 0;
     row-gap: 48px; 
 }
 .portfolio-item {
-    width:calc((100% – 48px)/3);
+    width: calc((100%-48px)/3);
     line-height: 1.11;
     background: #FFF;
     flex-direction: column;
     align-items: flex-start;
     flex-shrink: 0;
-    background:  #FFF;
 }
 .container-portfolio-item-title{
     padding: 32px 16px;
