--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ padding: 32px 0;
     row-gap: 48px; 
 }
 .portfolio-item {
-    width: calc((100%-48px)/3);
+    width: calc((100% - 48px)/3);
     line-height: 1.11;
     background: #FFF;
     flex-direction: column;
